AMP-20151: Layout issue in advanced GIS
git-svn-id: file:///svn/branches/AMP_2_11_RELEASE@27377 9e8d75aa-d0cb-44a9-8341-a4b8ba1a38b4

--- a/amp/TEMPLATE/ampTemplate/gisModule/dev/app/less/helpers/nvd3.less
+++ b/amp/TEMPLATE/ampTemplate/gisModule/dev/app/less/helpers/nvd3.less
@@ -31,7 +31,7 @@
 
 .nvtooltip {
   position: absolute;
-  background-color: rgba(255,255,255,1.0);
+  background-color: rgba(255,255,255,0.4);
   padding: 1px;
   border: 1px solid rgba(0,0,0,.2);
   z-index: 10000;
